[tool.poetry]
name = "graphene-djmoney"
version = "0.2.2"
description = "GraphQL Money types for Django using graphene and django-money (djmoney)."
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]

[tool.flit.metadata]
module = "graphene-djmoney"

[tool.poetry.dependencies]
python = "^3.7"
graphene = ">=3.2.1"
Django = ">3"
graphene-django = ">=3"
django-money = "^3.0.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
